code/rest-villains/deploy/k8s/java17-openshift.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: villains-db
    application: villains-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: villains-service
    app.openshift.io/runtime: postgresql
  name: villains-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: villains-db
  template:
    metadata:
      labels:
        application: villains-service
        name: villains-db
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: villains-db-config
          image: bitnami/postgresql:14
          name: villains-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: villains-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: villains-db-init-data
      volumes:
        - emptyDir: {}
          name: villains-db-data
        - emptyDir: {}
          name: villains-db-init-data
        - configMap:
            name: villains-db-init
          name: villains-db-init
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: villains-db
    application: villains-service
    system: quarkus-super-heroes
  name: villains-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: villains-db
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "villains-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:33 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8084"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java17-latest
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/version: java17-latest
    app.kubernetes.io/part-of: villains-service
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/connects-to: "villains-db,otel-collector"
        app.openshift.io/vcs-ref: main
        app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:33 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8084"
        prometheus.io/scheme: http
      labels:
        app: rest-villains
        application: villains-service
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: rest-villains
        app.kubernetes.io/version: java17-latest
        app.kubernetes.io/part-of: villains-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: rest-villains:java17-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-villains
          ports:
            - containerPort: 8084
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - rest-villains
        from:
          kind: ImageStreamTag
          name: rest-villains:java17-latest
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "villains-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:33 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8084"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java17-latest
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8084
  selector:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java17-latest
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "villains-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:33 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java17-latest
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  host: ""
  port:
    targetPort: http
  to:
    kind: Service
    name: rest-villains
